--- a/src/Agronomia.Angular/src/app/marketplace/list/marketplace-list-page.component.html
+++ b/src/Agronomia.Angular/src/app/marketplace/list/marketplace-list-page.component.html
@@ -3,7 +3,7 @@
     <div>
       <p class="eyebrow">Marketplace</p>
       <h1>Find products</h1>
-      <p class="subtitle">Browse offers from trusted sellers.</p>
+      <p class="subtitle">Veja ofertas de vendedores confiaveis.</p>
     </div>
   </header>
 
